[gd_scene load_steps=10 format=2]

[ext_resource path="res://classes/entity_class/scenes/EntityClass.tscn" type="PackedScene" id=1]
[ext_resource path="res://classes/CharacterClass/scripts/character_class.gd" type="Script" id=2]
[ext_resource path="res://classes/CharacterClass/scripts/walk.gd" type="Script" id=3]
[ext_resource path="res://classes/CharacterClass/scripts/idle.gd" type="Script" id=4]
[ext_resource path="res://classes/CharacterClass/scripts/jump.gd" type="Script" id=5]
[ext_resource path="res://classes/CharacterClass/scripts/fall.gd" type="Script" id=6]
[ext_resource path="res://classes/CharacterClass/scripts/climb.gd" type="Script" id=7]
[ext_resource path="res://classes/CharacterClass/scripts/interacting.gd" type="Script" id=8]
[ext_resource path="res://classes/CharacterClass/scripts/piloting.gd" type="Script" id=9]

[node name="CharacterClass" instance=ExtResource( 1 )]
script = ExtResource( 2 )
current_weapon_path = NodePath("Sprite/CurrentWeapon")

[node name="Idle" type="Node" parent="StateMachine" index="0"]
script = ExtResource( 4 )

[node name="Walk" type="Node" parent="StateMachine" index="1"]
script = ExtResource( 3 )

[node name="Jump" type="Node" parent="StateMachine" index="2"]
script = ExtResource( 5 )

[node name="Fall" type="Node" parent="StateMachine" index="3"]
script = ExtResource( 6 )

[node name="Climb" type="Node" parent="StateMachine" index="4"]
script = ExtResource( 7 )
__meta__ = {
"_editor_description_": "This is the state of the character if it is climbing"
}

[node name="Interacting" type="Node" parent="StateMachine" index="5"]
script = ExtResource( 8 )
__meta__ = {
"_editor_description_": "This is the state of the character if it is climbing"
}

[node name="Piloting" type="Node" parent="StateMachine" index="6"]
script = ExtResource( 9 )
__meta__ = {
"_editor_description_": "State ofthe character if he or she is piloting a ship"
}
